# log-sorter

./: .env  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  web.py
app/: form.py  services.py  sorter.py
app/config/: connection.py  settings.py
app/models/: __init__.py  log.py  message.py
static/: style.css
templates/: index.html  search.html
